RESOLVED FIXED302670
Crash in [AVSampleBufferAudioRenderer enqueueSampleBuffer:]
https://bugs.webkit.org/show_bug.cgi?id=302670
Summary Crash in [AVSampleBufferAudioRenderer enqueueSampleBuffer:]
Jean-Yves Avenard [:jya]
Reported 2025-11-17 16:08:58 PST
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sonoma-Release-WK2-Intel-Tests-EWS/9b81a3b4-32350/results.html ``` 0 com.apple.CoreFoundation 0x7ff807e1dcd6 __exceptionPreprocess + 226 (/AppleInternal/Library/BuildRoots/b0c24a1e-bd47-11ef-bf9c-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/ObjC.subproj/NSException.m:249) 1 libobjc.A.dylib 0x7ff80790d9dd objc_exception_throw + 48 (/AppleInternal/Library/BuildRoots/289ffcb4-455d-11ef-953d-e2437461156c/Library/Caches/com.apple.xbs/Sources/objc4/runtime/objc-exception.mm:356) 2 com.apple.AVFCore 0x7ff81e424198 -[AVSampleBufferAudioRenderer enqueueSampleBuffer:] + 739 (/AppleInternal/Library/BuildRoots/1f63aa70-5c4e-11ef-927b-daac7d5d70b1/Library/Caches/com.apple.xbs/Sources/AVFoundation_AVFCore/Fig/AVSampleBufferAudioRenderer.m:0) 3 com.apple.WebCore 0x1299c3142 WebCore::AudioVideoRendererAVFObjC::enqueueSample(WTF::ObjectIdentifierGeneric<WebCore::SamplesRendererTrackIdentifierType, WTF::ObjectIdentifierThreadSafeAccessTraits<unsigned long long>, unsigned long long>, WTF::Ref<WebCore::MediaSample, WTF::RawPtrTraits<WebCore::MediaSample>, WTF::DefaultRefDerefTraits<WebCore::MediaSample>>&&, std::__1::optional<WTF::MediaTime>) 4 com.apple.WebCore 0x128d73395 WebCore::SourceBufferPrivateAVFObjC::enqueueSample(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long) 5 com.apple.WebCore 0x128d72fd4 WebCore::SourceBufferPrivateAVFObjC::enqueueSample(WTF::Ref<WebCore::MediaSample, WTF::RawPtrTraits<WebCore::MediaSample>, WTF::DefaultRefDerefTraits<WebCore::MediaSample>>&&, unsigned long long) 6 com.apple.WebCore 0x12af09127 WebCore::SourceBufferPrivate::provideMediaData(WebCore::TrackBuffer&, unsigned long long) 7 com.apple.WebCore 0x12af07bac WebCore::SourceBufferPrivate::reenqueueMediaForTime(WebCore::TrackBuffer&, unsigned long long, WTF::MediaTime const&, WebCore::SourceBufferPrivate::NeedsFlush) 8 com.apple.WebCore 0x12af09521 WebCore::SourceBufferPrivate::reenqueueMediaIfNeeded(WTF::MediaTime const&) 9 com.apple.WebKit 0x114ad4217 WebKit::RemoteSourceBufferProxy::reenqueueMediaIfNeeded(WTF::MediaTime const&) ```
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-17 16:09:04 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-11-17 16:18:48 PST
EWS
Comment 3 2025-11-17 18:48:08 PST
Committed 303156@main (e4f5d4c3b697): <https://commits.webkit.org/303156@main> Reviewed commits have been landed. Closing PR #54075 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.