Crash in [AVSampleBufferAudioRenderer enqueueSampleBuffer:] https://bugs.webkit.org/show_bug.cgi?id=302670 rdar://164919153

Reviewed by Eric Carlson.

When we switched to using the AudioVideoRendererAVFObjC, the change from
225530@main was dropped for audio samples (we only kept the video check one).

We re-add:
"Protect against the possibility of AVStreamDataParser generating non-video or -audio samples in an otherwise
video- or audio-track. Check the format description attached to the sample before appending, and ASSERT in
debug builds and ERROR_LOG in release builds, as this is an exceptional condition."

* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.mm:
(WebCore::AudioVideoRendererAVFObjC::enqueueSample):

Canonical link: https://commits.webkit.org/303156@main